@@ -1,4 +1,9 @@
-﻿drkns 24.01.2015 09:09:05 +0200 - build 4255
+﻿svs 26.01.2015 15:43:08 +0300 - build 4256
+
+1. Падение дебажного FAR при вызове "__FARKEY_ToName(-1)".
+   В KeyToTextImpl() "KeyText[0]=(wchar_t)(Key&0xFFFF);" приводило к невалидному символу...
+
+drkns 24.01.2015 09:09:05 +0200 - build 4255
 
 1. Уточнение 4254.2.
 
